# lmi

./: .clang-tidy  CMakeLists.txt  Doxyfile.in  PKGBUILD  README.md  conanfile.txt  format.sh
include/: CMakeLists.txt  lmiConfig.cmake
include/lmi/: iostream_support.h  lmi.h
include/lmi/algorithm/: decomposition.h  differentiation.h  integration.h
include/lmi/detail/: defines.h  matrix.h  quaternion.h  vector.h
include/lmi/detail/vector/: iostream_support.h  sse.h  vector_base.h
include/lmi/detail/vector/sse/: vec2.h  vec3.h  vec4.h
include/lmi/gfx/: projection.h  transform.h
test/: CMakeLists.txt  testmain.cpp
